src/PersonalContacts/PersonalContacts/docs/v1.0-beta/Microsoft.Graph.PersonalContacts.md
---
Module Name: Microsoft.Graph.Beta.PersonalContacts
Module Guid: e7fd85b8-9b9e-4f6a-995c-35a2b3a12535
Download Help Link: https://docs.microsoft.com/en-us/powershell/module/Microsoft.Graph.Beta.personalcontacts
Help Version: 1.0.0.0
Locale: en-US
---

# Microsoft.Graph.Beta.PersonalContacts Module
## Description
Microsoft.Graph.Beta PowerShell Cmdlets

## Microsoft.Graph.Beta.PersonalContacts Cmdlets
### [Get-MgBetaUserContact](Get-MgBetaUserContact.md)
The user's contacts.
Read-only.
Nullable.

### [Get-MgBetaUserContactExtension](Get-MgBetaUserContactExtension.md)
The collection of open extensions defined for the contact.
Nullable.

### [Get-MgBetaUserContactFolder](Get-MgBetaUserContactFolder.md)
The user's contacts folders.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderChildFolder](Get-MgBetaUserContactFolderChildFolder.md)
The collection of child folders in the folder.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderChildFolderContact](Get-MgBetaUserContactFolderChildFolderContact.md)
The contacts in the folder.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderChildFolderContactExtension](Get-MgBetaUserContactFolderChildFolderContactExtension.md)
The collection of open extensions defined for the contact.
Nullable.

### [Get-MgBetaUserContactFolderChildFolderContactMultiValueExtendedProperty](Get-MgBetaUserContactFolderChildFolderContactMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderChildFolderContactPhoto](Get-MgBetaUserContactFolderChildFolderContactPhoto.md)
Optional contact picture.
You can get or set a photo for a contact.

### [Get-MgBetaUserContactFolderChildFolderContactPhotoContent](Get-MgBetaUserContactFolderChildFolderContactPhotoContent.md)
Get media content for the navigation property photo from users

### [Get-MgBetaUserContactFolderChildFolderContactSingleValueExtendedProperty](Get-MgBetaUserContactFolderChildFolderContactSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderChildFolderMultiValueExtendedProperty](Get-MgBetaUserContactFolderChildFolderMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contactFolder.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderChildFolderSingleValueExtendedProperty](Get-MgBetaUserContactFolderChildFolderSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contactFolder.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderContact](Get-MgBetaUserContactFolderContact.md)
The contacts in the folder.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderContactExtension](Get-MgBetaUserContactFolderContactExtension.md)
The collection of open extensions defined for the contact.
Nullable.

### [Get-MgBetaUserContactFolderContactMultiValueExtendedProperty](Get-MgBetaUserContactFolderContactMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderContactPhoto](Get-MgBetaUserContactFolderContactPhoto.md)
Optional contact picture.
You can get or set a photo for a contact.

### [Get-MgBetaUserContactFolderContactPhotoContent](Get-MgBetaUserContactFolderContactPhotoContent.md)
Get media content for the navigation property photo from users

### [Get-MgBetaUserContactFolderContactSingleValueExtendedProperty](Get-MgBetaUserContactFolderContactSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderMultiValueExtendedProperty](Get-MgBetaUserContactFolderMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contactFolder.
Read-only.
Nullable.

### [Get-MgBetaUserContactFolderSingleValueExtendedProperty](Get-MgBetaUserContactFolderSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contactFolder.
Read-only.
Nullable.

### [Get-MgBetaUserContactMultiValueExtendedProperty](Get-MgBetaUserContactMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgBetaUserContactPhoto](Get-MgBetaUserContactPhoto.md)
Optional contact picture.
You can get or set a photo for a contact.

### [Get-MgBetaUserContactPhotoContent](Get-MgBetaUserContactPhotoContent.md)
Get media content for the navigation property photo from users

### [Get-MgBetaUserContactSingleValueExtendedProperty](Get-MgBetaUserContactSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contact.
Read-only.
Nullable.

### [New-MgBetaUserContact](New-MgBetaUserContact.md)
Add a contact to the root Contacts folder or to the contacts endpoint of another contact folder.

### [New-MgBetaUserContactExtension](New-MgBetaUserContactExtension.md)
Create new navigation property to extensions for users

### [New-MgBetaUserContactFolder](New-MgBetaUserContactFolder.md)
Create a new contactFolder under the user's default contacts folder.
You can also create a new contactfolder as a child of any specified contact folder.

### [New-MgBetaUserContactFolderChildFolder](New-MgBetaUserContactFolderChildFolder.md)
Create a new contactFolder as a child of a specified folder.
You can also create a new contactFolder under the user's default contact folder.

### [New-MgBetaUserContactFolderChildFolderContact](New-MgBetaUserContactFolderChildFolderContact.md)
Add a contact to the root Contacts folder or to the `contacts` endpoint of another contact folder.

### [New-MgBetaUserContactFolderChildFolderContactExtension](New-MgBetaUserContactFolderChildFolderContactExtension.md)
Create new navigation property to extensions for users

### [New-MgBetaUserContactFolderChildFolderContactMultiValueExtendedProperty](New-MgBetaUserContactFolderChildFolderContactMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserContactFolderChildFolderContactSingleValueExtendedProperty](New-MgBetaUserContactFolderChildFolderContactSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserContactFolderChildFolderMultiValueExtendedProperty](New-MgBetaUserContactFolderChildFolderMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserContactFolderChildFolderSingleValueExtendedProperty](New-MgBetaUserContactFolderChildFolderSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserContactFolderContact](New-MgBetaUserContactFolderContact.md)
Add a contact to the root Contacts folder or to the `contacts` endpoint of another contact folder.

### [New-MgBetaUserContactFolderContactExtension](New-MgBetaUserContactFolderContactExtension.md)
Create new navigation property to extensions for users

### [New-MgBetaUserContactFolderContactMultiValueExtendedProperty](New-MgBetaUserContactFolderContactMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserContactFolderContactSingleValueExtendedProperty](New-MgBetaUserContactFolderContactSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserContactFolderMultiValueExtendedProperty](New-MgBetaUserContactFolderMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserContactFolderSingleValueExtendedProperty](New-MgBetaUserContactFolderSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserContactMultiValueExtendedProperty](New-MgBetaUserContactMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserContactSingleValueExtendedProperty](New-MgBetaUserContactSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [Remove-MgBetaUserContact](Remove-MgBetaUserContact.md)
Delete navigation property contacts for users

### [Remove-MgBetaUserContactExtension](Remove-MgBetaUserContactExtension.md)
Delete navigation property extensions for users

### [Remove-MgBetaUserContactFolder](Remove-MgBetaUserContactFolder.md)
Delete navigation property contactFolders for users

### [Remove-MgBetaUserContactFolderChildFolder](Remove-MgBetaUserContactFolderChildFolder.md)
Delete navigation property childFolders for users

### [Remove-MgBetaUserContactFolderChildFolderContact](Remove-MgBetaUserContactFolderChildFolderContact.md)
Delete navigation property contacts for users

### [Remove-MgBetaUserContactFolderChildFolderContactExtension](Remove-MgBetaUserContactFolderChildFolderContactExtension.md)
Delete navigation property extensions for users

### [Remove-MgBetaUserContactFolderChildFolderContactMultiValueExtendedProperty](Remove-MgBetaUserContactFolderChildFolderContactMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserContactFolderChildFolderContactSingleValueExtendedProperty](Remove-MgBetaUserContactFolderChildFolderContactSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserContactFolderChildFolderMultiValueExtendedProperty](Remove-MgBetaUserContactFolderChildFolderMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserContactFolderChildFolderSingleValueExtendedProperty](Remove-MgBetaUserContactFolderChildFolderSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserContactFolderContact](Remove-MgBetaUserContactFolderContact.md)
Delete navigation property contacts for users

### [Remove-MgBetaUserContactFolderContactExtension](Remove-MgBetaUserContactFolderContactExtension.md)
Delete navigation property extensions for users

### [Remove-MgBetaUserContactFolderContactMultiValueExtendedProperty](Remove-MgBetaUserContactFolderContactMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserContactFolderContactSingleValueExtendedProperty](Remove-MgBetaUserContactFolderContactSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserContactFolderMultiValueExtendedProperty](Remove-MgBetaUserContactFolderMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserContactFolderSingleValueExtendedProperty](Remove-MgBetaUserContactFolderSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserContactMultiValueExtendedProperty](Remove-MgBetaUserContactMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserContactSingleValueExtendedProperty](Remove-MgBetaUserContactSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Set-MgBetaUserContactFolderChildFolderContactPhotoContent](Set-MgBetaUserContactFolderChildFolderContactPhotoContent.md)
Update media content for the navigation property photo in users

### [Set-MgBetaUserContactFolderContactPhotoContent](Set-MgBetaUserContactFolderContactPhotoContent.md)
Update media content for the navigation property photo in users

### [Set-MgBetaUserContactPhotoContent](Set-MgBetaUserContactPhotoContent.md)
Update media content for the navigation property photo in users

### [Update-MgBetaUserContact](Update-MgBetaUserContact.md)
Update the navigation property contacts in users

### [Update-MgBetaUserContactExtension](Update-MgBetaUserContactExtension.md)
Update the navigation property extensions in users

### [Update-MgBetaUserContactFolder](Update-MgBetaUserContactFolder.md)
Update the navigation property contactFolders in users

### [Update-MgBetaUserContactFolderChildFolder](Update-MgBetaUserContactFolderChildFolder.md)
Update the navigation property childFolders in users

### [Update-MgBetaUserContactFolderChildFolderContact](Update-MgBetaUserContactFolderChildFolderContact.md)
Update the navigation property contacts in users

### [Update-MgBetaUserContactFolderChildFolderContactExtension](Update-MgBetaUserContactFolderChildFolderContactExtension.md)
Update the navigation property extensions in users

### [Update-MgBetaUserContactFolderChildFolderContactMultiValueExtendedProperty](Update-MgBetaUserContactFolderChildFolderContactMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserContactFolderChildFolderContactPhoto](Update-MgBetaUserContactFolderChildFolderContactPhoto.md)
Update the navigation property photo in users

### [Update-MgBetaUserContactFolderChildFolderContactSingleValueExtendedProperty](Update-MgBetaUserContactFolderChildFolderContactSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserContactFolderChildFolderMultiValueExtendedProperty](Update-MgBetaUserContactFolderChildFolderMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserContactFolderChildFolderSingleValueExtendedProperty](Update-MgBetaUserContactFolderChildFolderSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserContactFolderContact](Update-MgBetaUserContactFolderContact.md)
Update the navigation property contacts in users

### [Update-MgBetaUserContactFolderContactExtension](Update-MgBetaUserContactFolderContactExtension.md)
Update the navigation property extensions in users

### [Update-MgBetaUserContactFolderContactMultiValueExtendedProperty](Update-MgBetaUserContactFolderContactMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserContactFolderContactPhoto](Update-MgBetaUserContactFolderContactPhoto.md)
Update the navigation property photo in users

### [Update-MgBetaUserContactFolderContactSingleValueExtendedProperty](Update-MgBetaUserContactFolderContactSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserContactFolderMultiValueExtendedProperty](Update-MgBetaUserContactFolderMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserContactFolderSingleValueExtendedProperty](Update-MgBetaUserContactFolderSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserContactMultiValueExtendedProperty](Update-MgBetaUserContactMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserContactPhoto](Update-MgBetaUserContactPhoto.md)
Update the navigation property photo in users

### [Update-MgBetaUserContactSingleValueExtendedProperty](Update-MgBetaUserContactSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

