src/PersonalContacts/PersonalContacts/docs/v1.0/Microsoft.Graph.PersonalContacts.md
---
Module Name: Microsoft.Graph.PersonalContacts
Module Guid: d2ad9986-d798-457f-a030-a01a923ff010
Download Help Link: https://docs.microsoft.com/en-us/powershell/module/microsoft.graph.personalcontacts
Help Version: 1.0.0.0
Locale: en-US
---

# Microsoft.Graph.PersonalContacts Module
## Description
Microsoft Graph PowerShell Cmdlets

## Microsoft.Graph.PersonalContacts Cmdlets
### [Get-MgUserContact](Get-MgUserContact.md)
The user's contacts.
Read-only.
Nullable.

### [Get-MgUserContactExtension](Get-MgUserContactExtension.md)
The collection of open extensions defined for the contact.
Read-only.
Nullable.

### [Get-MgUserContactFolder](Get-MgUserContactFolder.md)
The user's contacts folders.
Read-only.
Nullable.

### [Get-MgUserContactFolderChildFolder](Get-MgUserContactFolderChildFolder.md)
The collection of child folders in the folder.
Navigation property.
Read-only.
Nullable.

### [Get-MgUserContactFolderChildFolderContact](Get-MgUserContactFolderChildFolderContact.md)
The contacts in the folder.
Navigation property.
Read-only.
Nullable.

### [Get-MgUserContactFolderChildFolderContactExtension](Get-MgUserContactFolderChildFolderContactExtension.md)
The collection of open extensions defined for the contact.
Read-only.
Nullable.

### [Get-MgUserContactFolderChildFolderContactMultiValueExtendedProperty](Get-MgUserContactFolderChildFolderContactMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgUserContactFolderChildFolderContactPhoto](Get-MgUserContactFolderChildFolderContactPhoto.md)
Optional contact picture.
You can get or set a photo for a contact.

### [Get-MgUserContactFolderChildFolderContactPhotoContent](Get-MgUserContactFolderChildFolderContactPhotoContent.md)
Get media content for the navigation property photo from users

### [Get-MgUserContactFolderChildFolderContactSingleValueExtendedProperty](Get-MgUserContactFolderChildFolderContactSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgUserContactFolderChildFolderMultiValueExtendedProperty](Get-MgUserContactFolderChildFolderMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contactFolder.
Read-only.
Nullable.

### [Get-MgUserContactFolderChildFolderSingleValueExtendedProperty](Get-MgUserContactFolderChildFolderSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contactFolder.
Read-only.
Nullable.

### [Get-MgUserContactFolderContact](Get-MgUserContactFolderContact.md)
The contacts in the folder.
Navigation property.
Read-only.
Nullable.

### [Get-MgUserContactFolderContactExtension](Get-MgUserContactFolderContactExtension.md)
The collection of open extensions defined for the contact.
Read-only.
Nullable.

### [Get-MgUserContactFolderContactMultiValueExtendedProperty](Get-MgUserContactFolderContactMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgUserContactFolderContactPhoto](Get-MgUserContactFolderContactPhoto.md)
Optional contact picture.
You can get or set a photo for a contact.

### [Get-MgUserContactFolderContactPhotoContent](Get-MgUserContactFolderContactPhotoContent.md)
Get media content for the navigation property photo from users

### [Get-MgUserContactFolderContactSingleValueExtendedProperty](Get-MgUserContactFolderContactSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgUserContactFolderMultiValueExtendedProperty](Get-MgUserContactFolderMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contactFolder.
Read-only.
Nullable.

### [Get-MgUserContactFolderSingleValueExtendedProperty](Get-MgUserContactFolderSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contactFolder.
Read-only.
Nullable.

### [Get-MgUserContactMultiValueExtendedProperty](Get-MgUserContactMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the contact.
Read-only.
Nullable.

### [Get-MgUserContactPhoto](Get-MgUserContactPhoto.md)
Optional contact picture.
You can get or set a photo for a contact.

### [Get-MgUserContactPhotoContent](Get-MgUserContactPhotoContent.md)
Get media content for the navigation property photo from users

### [Get-MgUserContactSingleValueExtendedProperty](Get-MgUserContactSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the contact.
Read-only.
Nullable.

### [New-MgUserContact](New-MgUserContact.md)
Add a contact to the root Contacts folder or to the contacts endpoint of another contact folder.

### [New-MgUserContactExtension](New-MgUserContactExtension.md)
Create new navigation property to extensions for users

### [New-MgUserContactFolder](New-MgUserContactFolder.md)
Create a new contactFolder under the user's default contacts folder.
You can also create a new contactfolder as a child of any specified contact folder.

### [New-MgUserContactFolderChildFolder](New-MgUserContactFolderChildFolder.md)
Create a new contactFolder as a child of a specified folder.
You can also create a new contactFolder under the user's default contact folder.

### [New-MgUserContactFolderChildFolderContact](New-MgUserContactFolderChildFolderContact.md)
Add a contact to the root Contacts folder or to the `contacts` endpoint of another contact folder.

### [New-MgUserContactFolderChildFolderContactExtension](New-MgUserContactFolderChildFolderContactExtension.md)
Create new navigation property to extensions for users

### [New-MgUserContactFolderChildFolderContactMultiValueExtendedProperty](New-MgUserContactFolderChildFolderContactMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgUserContactFolderChildFolderContactSingleValueExtendedProperty](New-MgUserContactFolderChildFolderContactSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgUserContactFolderChildFolderMultiValueExtendedProperty](New-MgUserContactFolderChildFolderMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgUserContactFolderChildFolderSingleValueExtendedProperty](New-MgUserContactFolderChildFolderSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgUserContactFolderContact](New-MgUserContactFolderContact.md)
Add a contact to the root Contacts folder or to the `contacts` endpoint of another contact folder.

### [New-MgUserContactFolderContactExtension](New-MgUserContactFolderContactExtension.md)
Create new navigation property to extensions for users

### [New-MgUserContactFolderContactMultiValueExtendedProperty](New-MgUserContactFolderContactMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgUserContactFolderContactSingleValueExtendedProperty](New-MgUserContactFolderContactSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgUserContactFolderMultiValueExtendedProperty](New-MgUserContactFolderMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgUserContactFolderSingleValueExtendedProperty](New-MgUserContactFolderSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgUserContactMultiValueExtendedProperty](New-MgUserContactMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgUserContactSingleValueExtendedProperty](New-MgUserContactSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [Remove-MgUserContact](Remove-MgUserContact.md)
Delete navigation property contacts for users

### [Remove-MgUserContactExtension](Remove-MgUserContactExtension.md)
Delete navigation property extensions for users

### [Remove-MgUserContactFolder](Remove-MgUserContactFolder.md)
Delete navigation property contactFolders for users

### [Remove-MgUserContactFolderChildFolder](Remove-MgUserContactFolderChildFolder.md)
Delete navigation property childFolders for users

### [Remove-MgUserContactFolderChildFolderContact](Remove-MgUserContactFolderChildFolderContact.md)
Delete navigation property contacts for users

### [Remove-MgUserContactFolderChildFolderContactExtension](Remove-MgUserContactFolderChildFolderContactExtension.md)
Delete navigation property extensions for users

### [Remove-MgUserContactFolderChildFolderContactMultiValueExtendedProperty](Remove-MgUserContactFolderChildFolderContactMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgUserContactFolderChildFolderContactSingleValueExtendedProperty](Remove-MgUserContactFolderChildFolderContactSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgUserContactFolderChildFolderMultiValueExtendedProperty](Remove-MgUserContactFolderChildFolderMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgUserContactFolderChildFolderSingleValueExtendedProperty](Remove-MgUserContactFolderChildFolderSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgUserContactFolderContact](Remove-MgUserContactFolderContact.md)
Delete navigation property contacts for users

### [Remove-MgUserContactFolderContactExtension](Remove-MgUserContactFolderContactExtension.md)
Delete navigation property extensions for users

### [Remove-MgUserContactFolderContactMultiValueExtendedProperty](Remove-MgUserContactFolderContactMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgUserContactFolderContactSingleValueExtendedProperty](Remove-MgUserContactFolderContactSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgUserContactFolderMultiValueExtendedProperty](Remove-MgUserContactFolderMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgUserContactFolderSingleValueExtendedProperty](Remove-MgUserContactFolderSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgUserContactMultiValueExtendedProperty](Remove-MgUserContactMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgUserContactSingleValueExtendedProperty](Remove-MgUserContactSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Set-MgUserContactFolderChildFolderContactPhotoContent](Set-MgUserContactFolderChildFolderContactPhotoContent.md)
Update media content for the navigation property photo in users

### [Set-MgUserContactFolderContactPhotoContent](Set-MgUserContactFolderContactPhotoContent.md)
Update media content for the navigation property photo in users

### [Set-MgUserContactPhotoContent](Set-MgUserContactPhotoContent.md)
Update media content for the navigation property photo in users

### [Update-MgUserContact](Update-MgUserContact.md)
Update the navigation property contacts in users

### [Update-MgUserContactExtension](Update-MgUserContactExtension.md)
Update the navigation property extensions in users

### [Update-MgUserContactFolder](Update-MgUserContactFolder.md)
Update the navigation property contactFolders in users

### [Update-MgUserContactFolderChildFolder](Update-MgUserContactFolderChildFolder.md)
Update the navigation property childFolders in users

### [Update-MgUserContactFolderChildFolderContact](Update-MgUserContactFolderChildFolderContact.md)
Update the navigation property contacts in users

### [Update-MgUserContactFolderChildFolderContactExtension](Update-MgUserContactFolderChildFolderContactExtension.md)
Update the navigation property extensions in users

### [Update-MgUserContactFolderChildFolderContactMultiValueExtendedProperty](Update-MgUserContactFolderChildFolderContactMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgUserContactFolderChildFolderContactPhoto](Update-MgUserContactFolderChildFolderContactPhoto.md)
Update the navigation property photo in users

### [Update-MgUserContactFolderChildFolderContactSingleValueExtendedProperty](Update-MgUserContactFolderChildFolderContactSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgUserContactFolderChildFolderMultiValueExtendedProperty](Update-MgUserContactFolderChildFolderMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgUserContactFolderChildFolderSingleValueExtendedProperty](Update-MgUserContactFolderChildFolderSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgUserContactFolderContact](Update-MgUserContactFolderContact.md)
Update the navigation property contacts in users

### [Update-MgUserContactFolderContactExtension](Update-MgUserContactFolderContactExtension.md)
Update the navigation property extensions in users

### [Update-MgUserContactFolderContactMultiValueExtendedProperty](Update-MgUserContactFolderContactMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgUserContactFolderContactPhoto](Update-MgUserContactFolderContactPhoto.md)
Update the navigation property photo in users

### [Update-MgUserContactFolderContactSingleValueExtendedProperty](Update-MgUserContactFolderContactSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgUserContactFolderMultiValueExtendedProperty](Update-MgUserContactFolderMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgUserContactFolderSingleValueExtendedProperty](Update-MgUserContactFolderSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgUserContactMultiValueExtendedProperty](Update-MgUserContactMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgUserContactPhoto](Update-MgUserContactPhoto.md)
Update the navigation property photo in users

### [Update-MgUserContactSingleValueExtendedProperty](Update-MgUserContactSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

